--- a/imgShow.html
+++ b/imgShow.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>冯宇的个人网站</title>
 	<meta http-equiv=X-UA-Compatible content=IE=EmulateIE7>
-	<script src="../seajs/jquery.min.js"></script>
+	<script src="static/js/jq.js"></script>
 	<script src="static/js/previewImg2.js"></script>
 </head>
 <body>
